--- a/front-end/src/assets/scss/app.scss
+++ b/front-end/src/assets/scss/app.scss
@@ -1,3 +1,104 @@
-body{
- font-family: 'teradeli-book',sans-serif;
+body {
+  font-family: 'teradeli-book', sans-serif;
+}
+
+#mapSection {
+  width: 100%;
+  height: 600px;
+  overflow: hidden;
+  position: relative;
+  padding-top: 1.5rem!important;
+}
+
+.map-marker {
+  margin-left: -5px;
+  margin-top: 20px;
+  box-sizing: border-box;
+}
+
+.map-marker.map-clickable {
+  cursor: pointer;
+}
+
+.pulse {
+  width: 10px;
+  height: 10px;
+  border: 5px solid #f7f14c;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+  background-color: #716f42;
+  z-index: 10;
+  position: absolute;
+  box-sizing: border-box;
+}
+
+.map-marker .dot {
+  display: block;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #0081a7;
+  cursor: pointer;
+  box-shadow: 0 0 0 rgba(204, 169, 44, 0.4);
+  animation: pulse 1.5s infinite;
+  position: absolute;
+  top: -10px;
+  left: -8px;
+}
+
+.conttext {
+  background: white;
+  padding: 10px;
+  border-radius: 4px;
+  margin-left: 30px;
+
+  .img {
+    width: 150px;
+    border-radius: 4px;
+  }
+
+  .text {
+    text-align: left;
+    color: black;
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-size: 15px;
+    font-family: 'teradeli-medium', sans-serif;
+  }
+}
+
+.appshadow {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .04), 0 12px 20px 0 rgba(0, 0, 0, .08);
+  transition: 0.2s;
+}
+
+@-moz-keyframes pulse {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(0, 129, 167, 0.9);
+    box-shadow: 0 0 0 0 rgba(0, 129, 167, 0.9);
+  }
+  70% {
+    -moz-box-shadow: 0 0 0 10px rgba(204, 169, 44, 0);
+    box-shadow: 0 0 0 20px rgba(0, 129, 167, 0);
+  }
+  100% {
+    -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
+    box-shadow: 0 0 0 0 rgba(0, 129, 167, 0);
+  }
+}
+
+@-webkit-keyframes pulse {
+   0% {
+    -moz-box-shadow: 0 0 0 0 rgba(0, 129, 167, 0.9);
+    box-shadow: 0 0 0 0 rgba(0, 129, 167, 0.9);
+  }
+  70% {
+    -moz-box-shadow: 0 0 0 10px rgba(204, 169, 44, 0);
+    box-shadow: 0 0 0 20px rgba(0, 129, 167, 0);
+  }
+  100% {
+    -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
+    box-shadow: 0 0 0 0 rgba(0, 129, 167, 0);
+  }
 }
