--- a/front-end/src/assets/scss/app.scss
+++ b/front-end/src/assets/scss/app.scss
@@ -1,6 +1,49 @@
 body {
-  font-family: 'teradeli-book', sans-serif;
+  font-family: 'teradeli-book', sans-serif!important;
 }
+
+  .form-theme{
+    border: 1px solid #fff;
+    padding: 12px;
+    font-weight: bold;
+    line-height: 1.5;
+    color: #fff;
+    margin: 10px 0;
+    height: 55px;
+    font-size: 12px;
+    font-family: "teradeli-medium",sans-serif;
+    transition: all 0.6s ease;
+    &:focus{
+      border-color: #0081a7!important;
+      box-shadow: 0 1px 1px rgba(0,129,167,.075) inset, 0 0 8px rgba(0,129,167,.6);
+      outline: 0 none;
+    }
+    &::placeholder{
+      color: #B9B9B9;
+      font-weight: bold;
+      letter-spacing: 2px;
+    }
+  }
+  .btn-theme{
+    color: #fff;
+    border: none;
+    outline: 0;
+    font-size: 0.775rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 1.8px;
+    background-color: #0081a7 !important;
+    word-break: break-word;
+    padding: 9px 15px;
+    text-align: center;
+    border-radius: 30px;
+    font-weight: 600;
+    margin: 7px 0;
+    transition: all 0.6s ease;
+    &:hover{
+      background-color: #153038!important;
+    }
+  }
 
 #mapSection {
   width: 100%;
