--- a/front-end/src/assets/scss/app.scss
+++ b/front-end/src/assets/scss/app.scss
@@ -68,7 +68,9 @@ body {
     background-color: #153038 !important;
   }
 }
+
 .nav-btn {
+  height: 42px;
   color: #fff;
   border: none;
   outline: 0;
@@ -78,7 +80,8 @@ body {
   letter-spacing: 1.8px;
   background-color: #0081a7 !important;
   word-break: break-word;
-  padding: 10px 15px;
+  padding-left: 15px;
+  padding-right: 15px;
   text-align: center;
   border-radius: 30px;
   font-weight: 600;
@@ -204,6 +207,15 @@ body {
       letter-spacing: .8px;
     }
   }
+
+  .v-list-item {
+    border-bottom: 1px solid #9e9e9e45;
+    text-transform: uppercase;
+
+  }
+  .theme--light.v-list-item:not(.v-list-item--active):not(.v-list-item--disabled).current{
+      color:#0081a7!important;
+    }
 }
 
 @media (min-width: 768px) {
@@ -211,6 +223,7 @@ body {
     transform: translateX(-265px);
   }
 }
+
 @media (max-width: 767px) {
   #Trees_for_TigerContainer {
     transform: translateX(-230px);
@@ -221,9 +234,11 @@ body {
 .border-top-2 {
   border-top: #eae8e4 solid 1px;
 }
+
 .border-bottom-2 {
   border-bottom: #eae8e4 solid 1px;
 }
+
 .border-left-2 {
   border-left: #eae8e4 solid 1px;
 }
@@ -236,9 +251,11 @@ body {
   overflow-x: auto;
   max-width: 100%;
   display: flex;
+
   &::-webkit-scrollbar {
     display: none;
   }
+
   a {
     cursor: grabbing;
 
@@ -251,6 +268,7 @@ body {
 .modal-open {
   overflow: hidden !important;
 }
-.cursor-pointer{
+
+.cursor-pointer {
   cursor: pointer;
 }
