--- a/front-end/src/assets/scss/home.scss
+++ b/front-end/src/assets/scss/home.scss
@@ -5,6 +5,14 @@
   letter-spacing: .009em;
 }
 
+.text-white {
+  color: white;
+}
+
+.text-gray {
+  color: #888;
+}
+
 .page-title {
   font-family: 'teradeli-medium', sans-serif;
   line-height: 1;
