mission section design

--- a/front-end/src/assets/scss/home/mission.scss
+++ b/front-end/src/assets/scss/home/mission.scss
@@ -181,7 +181,7 @@
   z-index: 2;
   overflow: hidden;
 
-  > div {
+  & > div {
     &:first-of-type {
       right: 0;
       background-position: right center;
