--- a/front-end/src/assets/scss/home/video.scss
+++ b/front-end/src/assets/scss/home/video.scss
@@ -198,12 +198,8 @@
 
     .form-md {
         background: radial-gradient(circle at 50% 45%, #292929 0%, #0a0a0a 100%);
-        padding-left: 15px;
-        padding-right: 15px;
         width: 100%;
-        margin-top:-51px ;
-        padding-bottom: 70px;
-        padding-top: 10px;
+        padding: 10px 15px 70px;
         color:white;
         .form-theme {
             height: 40px;
