--- a/front-end/src/assets/scss/home/video.scss
+++ b/front-end/src/assets/scss/home/video.scss
@@ -1,270 +1,537 @@
 .videoSection {
-        position: relative;
-        background-color: #000;
-        height: 95vh !important;
-        min-height: 25rem;
-        width: 100%;
-        overflow: hidden;
-        border-bottom: solid 0.5px rgba(255, 255, 255, 0.1);
-        color: white;
-        margin-top: -51px;
-        &::after {
-            background: linear-gradient(0.75deg, #000000 0%, transparent 100%);
-            content: "";
-            position: absolute;
-            top: 0;
-            right: 0;
-            left: 0;
-            bottom: 0;
-            z-index: 1;
-            opacity: .5;
-        }
-
-        &::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            right: 0;
-            left: 0;
-            background-color: #121217;
-            opacity: 0.2;
-            z-index: 1;
-        }
-
-        .homepage-slider-content {
-            position: relative;
-            z-index: 2;
-            height: 100%;
-            margin-top: 51px;
-
-            &::after, &::before {
-                content: "";
-                position: absolute;
-                top: 0;
-                right: 0;
-                left: 0;
-                bottom: 0;
-                z-index: 1
-            }
-
-            & > div {
-                position: relative;
-                z-index: 3
-            }
-        }
+  position: relative;
+  background-color: #000;
+  height: 95vh !important;
+  min-height: 25rem;
+  width: 100%;
+  overflow: hidden;
+  border-bottom: solid 0.5px rgba(255, 255, 255, 0.1);
+  color: white;
+  margin-top: -51px;
+  @media (max-width: 768px) {
+    height: 100% !important;
+  }
 
 
-        .userDefine {
-            height: inherit;
-            z-index: 5;
+  .homepage-slider-content {
+    position: relative;
+    z-index: 2;
+    height: 100%;
+    margin-top: 51px;
 
-            @media(max-width: 425px) {
-                .topCenter, .bottomRight {
-                    max-width: 100%;
-                    flex: 0 0 100%;
-                }
-            }
-        }
-
-        @media(max-width: 768px) {
-            height: auto;
-        }
-
-        .topCenter {
-                margin-bottom: 30%!important;
-        }
-
-        .bannerLeft {
-            margin-top: 40px;
-
-            .title {
-                padding-bottom: 20px;
-                font-size: 40px !important;
-                color: white;
-                letter-spacing: -.009em;
-                font-family: 'teradeli-medium', sans-serif !important;
-                line-height: 1 !important;
-                transition: all .3s cubic-bezier(.39, .575, .565, 1);
-                @media(max-width: 768px) {
-                    width: 80%;
-                    text-align: center !important;
-                    margin: 0 auto;
-                }
-            }
-
-            .subtitle {
-                letter-spacing: .004em;
-                font-family: 'teradeli-light', sans-serif !important;
-                color: #fff;
-                line-height: 1.10722 !important;
-                transition: all .3s cubic-bezier(.39, .575, .565, 1);
-                padding-bottom: 20px;
-                font-size: 23px !important;
-                @media(max-width: 768px) {
-                    width: 80%;
-                    text-align: center !important;
-                    margin: 0 auto;
-                }
-            }
-        }
-
-        .inner {
-            color: grey;
-
-            img {
-                width: 30px;
-                margin: 0 auto;
-                display: block;
-                opacity: 0.7;
-            }
-
-            span {
-                font-size: 18px;
-                opacity: 0.7;
-                color: #fff;
-            }
-        }
-
-        .bottomleft {
-            font-size: 19px;
-            padding: 30px;
-            position: absolute !important;
-            bottom: 51px;
-            width: 100%;
-            z-index: 4;
-
-            span {
-                color: #888;
-            }
-
-            @media(max-width: 768px) {
-                display: none;
-            }
-        }
-
-        .bottomRight {
-            font-family: 'teradeli-book', sans-serif !important;
-           border-left: solid 1px rgba(255, 255, 255, 0.5);
-
-            .bottomText {
-                margin-top: 65px;
-                font-size: 14px;
-                @media(max-width: 1024px) {
-                    margin-top: 40px;
-                }
-                @media(max-width: 768px) {
-                    width: 60%;
-                    margin: 15px auto;
-                    text-align: center !important;
-                }
-            }
-
-            .progress {
-                height: 150px;
-                margin-top: 25px;
-                width: 150px;
-                -webkit-border-radius: 50%;
-                -moz-border-radius: 50%;
-                border-radius: 50%;
-                background: #FFF;
-                margin-left: auto;
-                margin-right: auto;
-            }
-
-            .progressHints {
-                text-align: center;
-                position: absolute;
-                right: 15px;
-                font-size: 13px;
-                bottom: 59%;
-            }
-
-            .title {
-                color: #fff;
-                line-height: 1.10722 !important;
-                font-size: 20px;
-            }
-        }
+    &::after, &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      z-index: 1
     }
 
-    .form {
-        @media(max-width: 768px) {
-            background: radial-gradient(circle at 50% 45%, #292929 0%, #0a0a0a 100%);
-            padding: 40px 17%;
-            width: 100%;
-        }
+    & > div {
+      position: relative;
+      z-index: 3
+    }
+  }
+
+
+  .userDefine {
+    height: inherit;
+    z-index: 5;
+
+    @media(max-width: 425px) {
+      .topCenter, .bottomRight {
+        max-width: 100%;
+        flex: 0 0 100%;
+      }
+    }
+  }
+
+  @media(max-width: 768px) {
+    height: auto;
+  }
+
+  .topCenter {
+    margin-bottom: 30% !important;
+  }
+
+  .bannerLeft {
+    margin-top: 40px;
+
+    .title {
+      padding-bottom: 20px;
+      font-size: 40px !important;
+      color: white;
+      letter-spacing: -.009em;
+      font-family: 'teradeli-medium', sans-serif !important;
+      line-height: 1 !important;
+      transition: all .3s cubic-bezier(.39, .575, .565, 1);
+      @media(max-width: 768px) {
+        width: 80%;
+        text-align: center !important;
+        margin: 0 auto;
+      }
     }
 
-    .form-md {
-        background: radial-gradient(circle at 50% 45%, #292929 0%, #0a0a0a 100%);
-        width: 100%;
-        padding: 10px 15px 70px;
-        color:white;
-        .form-theme {
-            height: 40px;
+    .subtitle {
+      letter-spacing: .004em;
+      font-family: 'teradeli-light', sans-serif !important;
+      color: #fff;
+      line-height: 1.10722 !important;
+      transition: all .3s cubic-bezier(.39, .575, .565, 1);
+      padding-bottom: 20px;
+      font-size: 23px !important;
+      @media(max-width: 768px) {
+        width: 80%;
+        text-align: center !important;
+        margin: 0 auto;
+      }
+    }
+  }
+
+  .inner {
+    color: grey;
+    @media (max-width: 768px) {
+      .col-md-4 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+
+        p {
+          margin-bottom: 0 !important;
         }
-        .bottomText{
-            font-size: 13px;
+
+        img {
+          padding-right: 10px;
+          width: 30px;
         }
+      }
     }
 
-
-    .homepage-slider-background {
-        position: absolute;
-        top: 0;
-        right: 0;
-        left: 0;
-        bottom: 0;
-        z-index: 1;
-        overflow: hidden;
-
-
-        .homepage-slider-background-item {
-            position: absolute;
-            top: 0;
-            right: 0;
-            left: 0;
-            bottom: 0;
-            z-index: 1;
-            transform: scale(1.05);
-            opacity: 0;
-            -webkit-background-size: cover;
-            background-size: cover;
-            background-position: center center;
-
-            &.active {
-                transform: scale(1) !important;
-                opacity: 1;
-                z-index: 2;
-                transition: opacity 3.5s, transform 2s !important;
-            }
-
-            &.activeNew {
-                z-index: 3;
-            }
-        }
-
-        .homepage-slider-background-item[data-direction="right"],
-        .homepage-slider-background-item[data-direction="left"],
-        .homepage-slider-background-item[data-direction="top"],
-        .homepage-slider-background-item[data-direction="bottom"] {
-            transition: transform 0.1s;
-        }
-
-        .homepage-slider-background-item[data-direction="right"] {
-            transform: scale(1.05) translateX(10%);
-        }
-
-        .homepage-slider-background-item[data-direction="left"] {
-            transform: scale(1.05) translateX(-10%);
-
-            .homepage-slider-background-item[data-direction="top"] {
-                transform: scale(1.05) translateY(-10%);
-            }
-
-            .homepage-slider-background-item[data-direction="bottom"] {
-                transform: scale(1.05) translateY(10%);
-            }
-        }
+    img {
+      width: 30px;
+      margin: 0 auto;
+      display: block;
+      opacity: 0.7;
     }
+
+    span {
+      font-size: 18px;
+      opacity: 0.7;
+      color: #fff;
+    }
+  }
+
+  .bottomleft {
+    font-size: 19px;
+    padding: 30px;
+    position: absolute !important;
+    bottom: 51px;
+    width: 100%;
+    z-index: 4;
+
+    span {
+      color: #888;
+    }
+
+    @media(max-width: 768px) {
+      display: none;
+    }
+  }
+
+  .bottomRight {
+    font-family: 'teradeli-book', sans-serif !important;
+    border-left: solid 1px rgba(255, 255, 255, 0.5);
+
+    .bottomText {
+      margin-top: 65px;
+      font-size: 14px;
+      @media(max-width: 1024px) {
+        margin-top: 40px;
+      }
+      @media(max-width: 768px) {
+        width: 60%;
+        margin: 15px auto;
+        text-align: center !important;
+      }
+    }
+
+    .progress {
+      height: 150px;
+      margin-top: 25px;
+      width: 150px;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      border-radius: 50%;
+      background: #FFF;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .progressHints {
+      text-align: center;
+      position: absolute;
+      right: 15px;
+      font-size: 13px;
+      bottom: 59%;
+    }
+
+    .title {
+      color: #fff;
+      line-height: 1.10722 !important;
+      font-size: 20px;
+    }
+  }
+}
+
+.form {
+  @media(max-width: 768px) {
+    background: radial-gradient(circle at 50% 45%, #292929 0%, #0a0a0a 100%);
+    padding: 40px 17%;
+    width: 100%;
+  }
+}
+
+.form-md {
+  background: radial-gradient(circle at 50% 45%, #292929 0%, #0a0a0a 100%);
+  width: 100%;
+  padding: 10px 15px 70px;
+  color: white;
+
+  .form-theme {
+    height: 40px;
+  }
+
+  .bottomText {
+    font-size: 13px;
+  }
+}
+
+
+.homepage-slider-background {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 1;
+  overflow: hidden;
+
+
+  .homepage-slider-background-item {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 1;
+    transform: scale(1.05);
+    opacity: 0;
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-position: center center;
+
+    &.active {
+      transform: scale(1) !important;
+      opacity: 1;
+      z-index: 2;
+      transition: opacity 3.5s, transform 2s !important;
+    }
+
+    &.activeNew {
+      z-index: 3;
+    }
+  }
+
+  .homepage-slider-background-item[data-direction="right"],
+  .homepage-slider-background-item[data-direction="left"],
+  .homepage-slider-background-item[data-direction="top"],
+  .homepage-slider-background-item[data-direction="bottom"] {
+    transition: transform 0.1s;
+  }
+
+  .homepage-slider-background-item[data-direction="right"] {
+    transform: scale(1.05) translateX(10%);
+  }
+
+  .homepage-slider-background-item[data-direction="left"] {
+    transform: scale(1.05) translateX(-10%);
+
+    .homepage-slider-background-item[data-direction="top"] {
+      transform: scale(1.05) translateY(-10%);
+    }
+
+    .homepage-slider-background-item[data-direction="bottom"] {
+      transform: scale(1.05) translateY(10%);
+    }
+  }
+}
+
+.scrollicon {
+  position: absolute !important;
+  bottom: 90px;
+  right: 50%;
+  -webkit-transform: translate3d(0, -50%, 0) scale(.7);
+  -ms-transform: translate3d(0, -50%, 0) scale(.7);
+  transform: translate3d(0, -50%, 0) scale(.7);
+  z-index: 3 !important;
+
+  .mouse {
+    top: 0;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 45px;
+    animation: nudgeMouse 5.5s ease-out infinite;
+
+    .Animate-Draw {
+      fill: none;
+      stroke: #0081a7;
+      stroke-width: 3;
+      fill-opacity: 1
+    }
+
+    &::after {
+      content: '';
+      background-color: rgba(255,255,255,.6);
+      width: 7px;
+      height: 7px;
+      border-radius: 100%;
+      animation: trackBallSlide 5.5s linear infinite;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      margin: auto;
+      transform: translateY(20px);
+    }
+
+    .frame {
+      width: 100%;
+      position: absolute;
+      z-index: 1;
+
+      path {
+        fill: none;
+        stroke: #0081a7;
+        stroke-width: 3;
+        opacity: .5
+      }
+
+    }
+
+    .mouse-left {
+      left: 0;
+
+      .Animate-Draw {
+        animation: DrawLine 5.5s ease-out infinite
+      }
+    }
+
+    .mouse-right {
+      right: 0;
+
+      .Animate-Draw {
+        animation: DrawLineBack 5.5s ease-out infinite
+      }
+    }
+
+    .mouse-left, .mouse-right {
+      width: 50%;
+      position: absolute;
+      z-index: 2;
+    }
+  }
+}
+
+@keyframes DrawLine {
+  0% {
+    stroke-dashOffset: 0;
+    stroke-dasharray: 120;
+    stroke-opacity: 1
+  }
+  22% {
+    stroke-dashOffset: 0;
+    stroke-dasharray: 120;
+    stroke-opacity: 1
+  }
+  38% {
+    stroke-dashOffset: 125;
+    stroke-dasharray: 120;
+    stroke-opacity: 1
+  }
+  38.1% {
+    stroke-dashOffset: 0;
+    stroke-dasharray: 120;
+    stroke-opacity: 0
+  }
+  48% {
+    stroke-dashOffset: 0;
+    stroke-dasharray: 120;
+    stroke-opacity: 1
+  }
+  64% {
+    stroke-dashOffset: 125;
+    stroke-dasharray: 120;
+    stroke-opacity: 1
+  }
+  64.1% {
+    stroke-dashOffset: 0;
+    stroke-dasharray: 120;
+    stroke-opacity: 0
+  }
+  74% {
+    stroke-dashOffset: 0;
+    stroke-dasharray: 120;
+    stroke-opacity: 1
+  }
+  90% {
+    stroke-opacity: 1;
+    stroke-dashOffset: 125;
+    stroke-dasharray: 120
+  }
+  90.1% {
+    stroke-dashOffset: 0;
+    stroke-dasharray: 120;
+    stroke-opacity: 0
+  }
+}
+
+@keyframes DrawLineBack {
+  0% {
+    stroke-dashOffset: 0;
+    stroke-dasharray: 120;
+    stroke-opacity: 1
+  }
+  22% {
+    stroke-dashOffset: 0;
+    stroke-dasharray: 120;
+    stroke-opacity: 1
+  }
+  38% {
+    stroke-dashOffset: -114;
+    stroke-dasharray: 120;
+    stroke-opacity: 1
+  }
+  38.1% {
+    stroke-dashOffset: 0;
+    stroke-dasharray: 120;
+    stroke-opacity: 0
+  }
+  48% {
+    stroke-dashOffset: 0;
+    stroke-dasharray: 120;
+    stroke-opacity: 1
+  }
+  64% {
+    stroke-dashOffset: -114;
+    stroke-dasharray: 120;
+    stroke-opacity: 1
+  }
+  64.1% {
+    stroke-dashOffset: 0;
+    stroke-dasharray: 120;
+    stroke-opacity: 0
+  }
+  74% {
+    stroke-dashOffset: 0;
+    stroke-dasharray: 120;
+    stroke-opacity: 1
+  }
+  90% {
+    stroke-opacity: 1;
+    stroke-dashOffset: -114;
+    stroke-dasharray: 120
+  }
+  90.1% {
+    stroke-dashOffset: 0;
+    stroke-dasharray: 120;
+    stroke-opacity: 0
+  }
+}
+
+@keyframes nudgeMouse {
+  0% {
+    transform: translateY(0) translateX(-50%)
+  }
+  22% {
+    transform: translateY(0) translateX(-50%)
+  }
+  38% {
+    transform: translateY(9px) translateX(-50%)
+  }
+  48% {
+    transform: translateY(0) translateX(-50%)
+  }
+  64% {
+    transform: translateY(9px) translateX(-50%)
+  }
+  74% {
+    transform: translateY(0) translateX(-50%)
+  }
+  90% {
+    transform: translateY(9px) translateX(-50%)
+  }
+}
+
+@keyframes trackBallSlide {
+  0% {
+    transform: translateY(20px) scale(1);
+    opacity: 1
+  }
+  22% {
+    transform: translateY(20px) scale(1);
+    opacity: 1
+  }
+  26% {
+    transform: translateY(30px) scale(.9);
+    opacity: 1
+  }
+  34% {
+    transform: translateY(55px) scale(.1);
+    opacity: 0
+  }
+  41% {
+    transform: translateY(30px) scale(0);
+    opacity: .3
+  }
+  48% {
+    transform: translateY(20px) scale(1);
+    opacity: 1
+  }
+  52% {
+    transform: translateY(30px) scale(.9);
+    opacity: 1
+  }
+  60% {
+    transform: translateY(55px) scale(.1);
+    opacity: 0
+  }
+  67% {
+    transform: translateY(30px) scale(0);
+    opacity: .3
+  }
+  74% {
+    transform: translateY(20px) scale(1);
+    opacity: 1
+  }
+  78% {
+    transform: translateY(30px) scale(.9);
+    opacity: 1
+  }
+  86% {
+    transform: translateY(55px) scale(.1);
+    opacity: 0
+  }
+  93% {
+    transform: translateY(30px) scale(0);
+    opacity: .3
+  }
+  100% {
+    transform: translateY(20px) scale(1);
+    opacity: 1
+  }
+}
