--- a/front-end/src/assets/scss/home.scss
+++ b/front-end/src/assets/scss/home.scss
@@ -8,9 +8,14 @@
 .text-white {
   color: white;
 }
-
+.text-lightblue {
+   color:#0081a7;
+}
 .text-gray {
   color: #888;
+}
+.bg-white{
+  background: white;
 }
 
 .page-title {
