mailchip success eroor and loading message

--- a/front-end/src/assets/scss/home/video.scss
+++ b/front-end/src/assets/scss/home/video.scss
@@ -144,6 +144,7 @@
   .bottomRight {
     font-family: 'teradeli-book', sans-serif !important;
     border-left: solid 1px rgba(255, 255, 255, 0.5);
+    z-index: 4!important;
 
     .bottomText {
       margin-top: 65px;
