font load solve, mailchip solve, browser language support

--- a/front-end/src/assets/fonts/font.css
+++ b/front-end/src/assets/fonts/font.css
@@ -1,17 +1,20 @@
 @font-face {
-  font-family: 'teradeli-book';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(../../assets/fonts/Teradeli-Book.woff) format('woff');
+    font-family: 'teradeli-book';
+    font-style: normal;
+    font-weight: 400;
+    font-display: block;
+
+    src: url(../../assets/fonts/Teradeli-Book.woff) format('woff');
 }
+
 @font-face {
-  font-family: 'teradeli-medium';
-  font-display: swap;
-  src: url(../../assets/fonts/Teradeli-Medium.woff) format('woff');
+    font-family: 'teradeli-medium';
+    font-display: block;
+    src: url(../../assets/fonts/Teradeli-Medium.woff) format('woff');
 }
+
 @font-face {
-  font-family: 'teradeli-light';
-  font-display: swap;
-  src: url(../../assets/fonts/Teradeli-Light.woff) format('woff');
+    font-family: 'teradeli-light';
+    font-display: block;
+    src: url(../../assets/fonts/Teradeli-Light.woff) format('woff');
 }
