--- a/front-end/src/assets/scss/home/video.scss
+++ b/front-end/src/assets/scss/home/video.scss
@@ -144,7 +144,7 @@
   .bottomRight {
     font-family: 'teradeli-book', sans-serif !important;
     border-left: solid 1px rgba(255, 255, 255, 0.5);
-    z-index: 4!important;
+    z-index: 4 !important;
 
     .bottomText {
       margin-top: 65px;
@@ -288,7 +288,7 @@
 
     &::after {
       content: '';
-      background-color: rgba(255,255,255,.6);
+      background-color: rgba(255, 255, 255, .6);
       width: 7px;
       height: 7px;
       border-radius: 100%;
@@ -526,5 +526,100 @@
   100% {
     transform: translateY(20px) scale(1);
     opacity: 1
+  }
+}
+
+.custom-toast {
+  position: fixed;
+  top: 70px;
+  right: auto;
+  width: 350px;
+  z-index: 20000;
+  padding: 1.5rem !important;
+
+  .toast-box {
+    border-radius: 15px !important;
+    background-color: rgba(29, 29, 31, .7);
+    color: white;
+    backdrop-filter: saturate(180%) blur(20px);
+    max-width: 350px;
+    overflow: hidden;
+    font-size: .875rem;
+    background-clip: padding-box;
+    border: none;
+    box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, .1);
+    padding: .5rem !important;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-transition: all 1s ease-out;
+    transition: all 1s ease-out;
+    -webkit-animation-name: bounceInLeft;
+    animation-name: bounceInLeft;
+
+    .toast-body {
+      font-size: 14px;
+      font-family: 'teradeli-light', sans-serif !important;
+      color: #eaeaea !important;
+      padding: .75rem;
+    }
+
+
+    .toast-header {
+      font-size: 14px;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-align: center;
+      align-items: center;
+      padding: .25rem .75rem;
+      color: #888;
+      background-color: rgba(29, 29, 31, 0) !important;
+      background-clip: padding-box;
+      font-family: 'teradeli-light', sans-serif !important;
+    }
+
+    .close {
+      font-size: 1.5rem;
+      color: #000;
+      opacity: 0.75;
+      text-shadow: 0 1px 0 #888 !important;
+      cursor: pointer;
+    }
+  }
+
+
+}
+
+@keyframes bounceInLeft {
+  from,
+  60%,
+  75%,
+  90%,
+  to {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(-3000px, 0, 0);
+    transform: translate3d(-3000px, 0, 0);
+  }
+  60% {
+    opacity: 1;
+    -webkit-transform: translate3d(25px, 0, 0);
+    transform: translate3d(25px, 0, 0);
+  }
+  75% {
+    -webkit-transform: translate3d(-10px, 0, 0);
+    transform: translate3d(-10px, 0, 0);
+  }
+  90% {
+    -webkit-transform: translate3d(5px, 0, 0);
+    transform: translate3d(5px, 0, 0);
+  }
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
   }
 }
