--- a/front-end/src/assets/scss/app.scss
+++ b/front-end/src/assets/scss/app.scss
@@ -1,12 +1,18 @@
-
 html {
   scroll-behavior: smooth;
 }
 
+.v-application {
+  font-family: 'teradeli-book', sans-serif !important;
+   .title { // To pin point specific classes of some components
+      font-family: 'teradeli-light', sans-serif !important;
+   }
+}
+
 .v-progress-circular__info {
   color: #fff;
-  font-size: 2rem;
-  font-weight: bold;
+  font-size: 1.6rem;
+  font-family: teradeli-medium;
 }
 
 body {
@@ -19,10 +25,10 @@ body {
 }
 
 .teradeli-book{
-  font-family: 'teradeli-light', sans-serif !important;
+  font-family: 'teradeli-book', sans-serif !important;
 }
 .teradeli-light {
-  font-family: 'teradeli-book', sans-serif !important;
+  font-family: 'teradeli-light', sans-serif !important;
 }
 .teradeli-medium {
   font-family: 'teradeli-medium', sans-serif !important;
@@ -52,22 +58,33 @@ body {
   }
 }
 
+.centerabsolute {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+  }
+
 .btn-theme {
   color: #fff;
   border: none;
   outline: 0;
-  font-size: 0.775rem;
+  font-size: .875rem;
   text-transform: uppercase;
   text-decoration: none;
   letter-spacing: 1.8px;
   background-color: #0081a7 !important;
   word-break: break-word;
-  padding: 16px 15px;
+  padding: 0px 15px;
   text-align: center;
   border-radius: 30px;
   font-weight: 600;
   margin: 7px 0;
   transition: all 0.6s ease;
+  line-height: 15px;
+  height: 48px;
 
   &:hover {
     background-color: #153038 !important;
@@ -226,11 +243,24 @@ body {
 
   }
 
-  .theme--light.v-list-item:not(.v-list-item--active):not(.v-list-item--disabled).current {
+  .v-list-item:not(.v-list-item--active):not(.v-list-item--disabled).current {
     color: #0081a7 !important;
   }
+
+  .v-toolbar__content {
+    padding: 0;
+  }
+
 }
 
+.nohover:focus::before, .nohover:hover::before {
+  opacity: 0!important;
+}
+
+.v-btn__content {
+  font-size: 26px;
+  font-family: teradeli-light;
+}
 
 #Eden_ProjetContainer {
   transform: translateX(-265px);
@@ -268,6 +298,85 @@ body {
 
 .border-top-1 {
   border-top: solid 1px #1c1b1b99;;
+}
+
+.fineborderr {
+  border-right: solid 1px rgba(255, 255, 255, 0.6);
+}
+
+.fineborderl {
+  border-left: solid 1px rgba(255, 255, 255, 0.6);
+}
+
+.finebordert {
+  border-top: solid 1px rgba(255, 255, 255, 0.6);
+}
+
+.fineborderb {
+  border-bottom: solid 1px rgba(255, 255, 255, 0.6);
+}
+@media (min-width: 1264px) {
+  .fineborderb-xl {
+      border-bottom: solid 1px rgba(255, 255, 255, 0.6);
+      border-bottom: solid 1px rgba(255, 255, 255, 0.6);
+  }
+  .fineborderr-xl {
+      border-right: solid 1px rgba(255, 255, 255, 0.6);
+  }
+  .fineborderl-xl {
+      border-left: solid 1px rgba(255, 255, 255, 0.6);
+  }
+  .finebordert-xl {
+      border-top: solid 1px rgba(255, 255, 255, 0.6);
+  }
+}
+
+@media (max-width: 1263px) {
+  .fineborderr-md {
+      border-right: solid 1px rgba(255, 255, 255, 0.6);
+  }
+  .fineborderl-md {
+      border-left: solid 1px rgba(255, 255, 255, 0.6);
+  }
+  .finebordert-md {
+      border-top: solid 1px rgba(255, 255, 255, 0.6);
+  }
+  .fineborderb-md {
+      border-bottom: solid 1px rgba(255, 255, 255, 0.6);
+  }
+  .fineborderb-md-0 {
+      border-bottom: none;
+  }
+  .fineborderl-md-0 {
+      border-left: none;
+  }
+  .finebordert-md-0 {
+      border-top: none;
+  }
+}
+
+@media (max-width: 991px) {
+  .fineborderr-sm {
+      border-right: solid 1px rgba(255, 255, 255, 0.6);
+  }
+  .fineborderl-sm {
+      border-left: solid 1px rgba(255, 255, 255, 0.6);
+  }
+  .finebordert-sm {
+      border-top: solid 1px rgba(255, 255, 255, 0.6);
+  }
+  .fineborderb-sm {
+      border-bottom: solid 1px rgba(255, 255, 255, 0.6);
+  }
+  .fineborderr-sm-0 {
+      border-right: none;
+  }
+  .fineborderl-sm-0 {
+      border-left: none;
+  }
+  .fineborderb-sm-0 {
+      border-bottom: none;
+  }
 }
 
 .instagram_gallery {
@@ -314,7 +423,6 @@ body {
   }
 }
 
-
 .modal-open {
   overflow: hidden !important;
 }
@@ -326,7 +434,7 @@ body {
   width:100%!important;
 }
 .h-100 {
-  height: 100%;
+  height: 100%!important;
 }
 .h-50 {
     height: 50%!important;
