--- a/front-end/src/assets/scss/home/mission.scss
+++ b/front-end/src/assets/scss/home/mission.scss
@@ -5,6 +5,7 @@
   position: relative;
   transition: background-position 1200ms cubic-bezier(0.694, 0, 0.335, 1);
   overflow: hidden;
+  background: black;
 }
 
 .fp-tableCell {
