--- a/front-end/src/assets/scss/home/video.scss
+++ b/front-end/src/assets/scss/home/video.scss
@@ -33,6 +33,11 @@
       position: relative;
       z-index: 3
     }
+    @media(min-width: 960px) {
+      .topCenter {
+        margin-top: 125px!important;
+      }
+    }
   }
 
 
@@ -190,7 +195,6 @@
 .form-md {
   background: radial-gradient(circle at 50% 45%, #292929 0%, #0a0a0a 100%);
   width: 100%;
-  padding: 10px 15px 70px;
   color: white;
 
   .form-theme {
@@ -202,6 +206,9 @@
   }
 }
 
+input.form-theme {
+  border: solid 1px rgba(255, 255, 255, 0.5);
+}
 
 .homepage-slider-background {
   position: absolute;
@@ -276,7 +283,7 @@
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    width: 45px;
+    width: 42px;
     animation: nudgeMouse 5.5s ease-out infinite;
 
     .Animate-Draw {
@@ -289,8 +296,8 @@
     &::after {
       content: '';
       background-color: rgba(255, 255, 255, .6);
-      width: 7px;
-      height: 7px;
+      width: 5px;
+      height: 5px;
       border-radius: 100%;
       animation: trackBallSlide 5.5s linear infinite;
       position: absolute;
