--- a/front-end/src/assets/scss/home.scss
+++ b/front-end/src/assets/scss/home.scss
@@ -110,8 +110,7 @@
     top:0!important;
   }
 }
-
-.gradientoverlay {
+.blackoverlay {
   &::before {
     content: "";
     position: absolute;
@@ -120,10 +119,11 @@
     right: 0;
     left: 0;
     background-color: #121217;
-    opacity: 0.5;
+    opacity: 0.1;
     z-index: 1;
   }
-
+}
+.gradientoverlay {
   &::after {
     background: linear-gradient(0.75deg, #000000 0%, transparent 100%);
     content: "";
