fix lazy background dynamic mission

--- a/front-end/src/assets/scss/home.scss
+++ b/front-end/src/assets/scss/home.scss
@@ -151,3 +151,8 @@
   background-size: cover;
   background-position: center center;
 }
+.mission-accordion{
+  .v-expansion-panel {
+    background-color: transparent!important;
+  }
+}
