--- a/front-end/src/assets/scss/home/product.scss
+++ b/front-end/src/assets/scss/home/product.scss
@@ -26,30 +26,6 @@
 
 .catalogue-item-background {
   min-height: 450px;
-
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 1;
-    background-color: rgba(0, 0, 0, .34);
-  }
-
-  &::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 2;
-    background-color: rgba(21, 48, 56, .87);
-    opacity: 0;
-    transition: opacity 0.3s;
-  }
 }
 
 .catalogue-double {
@@ -68,10 +44,8 @@
 
 .catalogue-item-content-title {
   position: absolute;
+  bottom: 20px;
   width: 100%;
-  top: 50%;
-  transform: translateY(-50%) translateX(50%);
-  right: 50%;
   z-index: 3;
   letter-spacing: 1px;
   text-align: center;
